# Edrak-Knowledge-Explorer

./: .gitignore  README.md
backend/: api.py  index.py  kg_endpoints.py  kg_file_endpoints.py  main.py  pyproject.toml  summarize_documents.py
design/Design Chat Interface/: README.md  index.html  package.json
design/Design Chat Interface/src/: App.tsx
design/Design Chat Interface/src/components/: DocumentSidebar.tsx
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  store.ts
frontend/src/components/: ChatArea.tsx  DocumentSidebar.tsx
frontend/src/components/tabs/: ChatTab.tsx  GraphTab.tsx  PDFTab.tsx  SummaryTab.tsx
frontend/src/types/: chat.ts
